--- a/app/src/main/res/layout/newlist.xml
+++ b/app/src/main/res/layout/newlist.xml
@@ -48,8 +48,18 @@
             android:fontFamily="sans-serif-light"
             android:maxLines="1"
             android:textColor="@color/black"
+            android:textSize="14sp"
+            tools:text="- Rabindranath"></TextView>
+        <TextView
+            android:id="@+id/bookDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:fontFamily="sans-serif-light"
+            android:maxLines="1"
+            android:textColor="@color/black"
             android:textSize="12sp"
-            tools:text="Rabindranath"></TextView>
+            tools:text="Publish Date : 1999"></TextView>
 
 
     </LinearLayout>
