--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,19 +2,22 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#FFFFFF">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="#FFFFFF">
 
         <LinearLayout
             android:id="@+id/searchSection"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/margin_8_dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:background="#FFFFFF">
 
             <SearchView
                 android:id="@+id/search_view_field"
@@ -22,6 +25,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:iconifiedByDefault="false"
+                android:textColor = "@color/textColorBookTitle"
                 android:queryHint="@string/search_view_hint"
                 tools:queryHint="@string/search_hint" />
 
@@ -38,7 +42,8 @@
             android:layout_height="match_parent"
             android:divider="@null"
             android:dividerHeight="0dp"
-            android:orientation="vertical" />
+            android:orientation="vertical"
+            android:background="#FFFFFF"/>
 
     </LinearLayout>
 
