--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,12 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="?android:attr/listPreferredItemHeight"
+    android:layout_height="72dp"
     android:orientation="horizontal"
     android:paddingEnd="@dimen/margin_16_dp"
     android:paddingLeft="@dimen/margin_16_dp"
     android:paddingRight="@dimen/margin_16_dp"
-    android:paddingStart="@dimen/margin_16_dp">
+    android:paddingStart="@dimen/margin_16_dp"
+    android:layout_margin="16dp"
+    android:background="#FFFFFF"
+    >
 
     <ImageView
         android:id="@+id/cover_image"
@@ -24,7 +27,8 @@
         android:layout_marginLeft="@dimen/margin_16_dp"
         android:layout_marginStart="@dimen/margin_16_dp"
         android:layout_weight="1"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="#FFFFFF">
 
         <TextView
             android:id="@+id/author"
@@ -34,20 +38,21 @@
             android:fontFamily="sans-serif-medium"
             android:maxLines="1"
             android:textAllCaps="true"
-            android:textColor="@color/textColorAuthor"
+            android:textColor="@color/textColorPrice"
             android:textSize="@dimen/author_text_size"
             tools:text="J.K. Rowling" />
 
         <TextView
             android:id="@+id/book_title"
-            android:elegantTextHeight="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:elegantTextHeight="true"
             android:ellipsize="end"
             android:lineSpacingMultiplier="1.1"
             android:maxLines="2"
             android:textColor="@color/textColorBookTitle"
             android:textSize="@dimen/title_text_size"
+            android:textStyle="bold"
             tools:text="Harry Potter i Kamień Filozoficzny" />
 
     </LinearLayout>
@@ -58,45 +63,14 @@
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="@dimen/margin_16_dp"
         android:layout_marginStart="@dimen/margin_16_dp"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/country_code"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:textAllCaps="true"
-            android:textColor="@color/textColorCountryCode"
-            android:textSize="@dimen/language_code_text_size"
-            tools:text="pl" />
+        android:orientation="vertical"
+        android:background="#FFFFFF">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/book_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:textColor="@color/textColorPrice"
-                android:textSize="@dimen/language_code_text_size"
-                android:textStyle="bold"
-                tools:text="39.99" />
-
-            <TextView
-                android:id="@+id/currency_code"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_marginLeft="@dimen/margin_8_dp"
-                android:textColor="@color/textColorPrice"
-                android:textSize="@dimen/language_code_text_size"
-                android:textStyle="bold"
-                tools:text="PLN" />
-
-        </LinearLayout>
+            android:orientation="horizontal"
+            android:background="#FFFFFF"/>
 
 
     </LinearLayout>
